# app/Backend/Api/Auth/Routes/api.php
@@ -2,10 +2,12 @@
 
 use App\Backend\Api\Auth\Controllers\ChangePasswordController;
 use App\Backend\Api\Auth\Controllers\EditProfileController;
+use App\Backend\Api\Auth\Controllers\ForgotPasswordController;
 use App\Backend\Api\Auth\Controllers\GetProfileController;
 use App\Backend\Api\Auth\Controllers\LoginController;
 use App\Backend\Api\Auth\Controllers\LogoutController;
 use App\Backend\Api\Auth\Controllers\RefreshTokenController;
+use App\Backend\Api\Auth\Controllers\ResetPasswordController;
 use Illuminate\Support\Facades\Route;
 
 Route::middleware('api')
@@ -26,4 +28,8 @@ Route::middleware('api')
                 Route::post('refresh', RefreshTokenController::class)
                     ->name('auth.refresh');
             });
+        Route::post('forgot-password', ForgotPasswordController::class)
+            ->name('auth.forgot-password');
+        Route::post('reset-password', ResetPasswordController::class)
+            ->name('password.reset');
     });
